Added telnet service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,11 @@
     "cSpell.words": [
         "dosd",
         "gliderlabs",
+        "keyout",
+        "newkey",
         "qbradq",
+        "reiver",
+        "RSASHA",
         "skare"
     ]
 }
