Added websocket client

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,8 @@
         "gliderlabs",
         "keyout",
         "newkey",
+        "nhooyr",
+        "nosniff",
         "qbradq",
         "reiver",
         "RSASHA",
